--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ flask-cors==4.0.0
 openai==1.6.1
 PyJWT==2.8.0
 Flask-Session==0.5.0
+gql==3.4.1
+redis==5.0.1
+flask-caching==2.1.0
+pandas==2.1.1
+matplotlib==3.8.0
+scikit-learn==1.4.0
