--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,60 @@
-# Umgebungsvariablen
+# Dependency directory
+node_modules/
+
+# Environment variables
 .env
 .env.local
-.env.development
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Python
+# Build directories
+dist/
+build/
+out/
+
+# SQLite database files
+*.sqlite
+*.sqlite3
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+
+# Editor directories and files
+.idea/
+.vscode/*
+!.vscode/extensions.json
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+coverage/
+.nyc_output/
+playwright-report/
+test-results/
+
+# Caching
+.eslintcache
+.cache/
+.npm/
+.temp/
+.parcel-cache/
+
+# Shopify
+shopify.app.toml.local
+
+# Python (from the old app)
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Flask
-instance/
-.webassets-cache
-flask_session/
-
-# Virtual Environment
 venv/
-ENV/
-
-# IDE-spezifische Dateien
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Betriebssystem-spezifische Dateien
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Logs
-*.log
-logs/
-
-# Temporäre Dateien
-tmp/
-temp/
+ENV/ 
