--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "shoppulseai",
+    "name": "shoppulse",
     "version": "1.0.0",
+    "description": "Shopify OAuth app for Vercel",
+    "main": "api/index.js",
     "private": true,
     "license": "MIT",
     "type": "commonjs",
     "scripts": {
-      "dev": "cross-env NODE_ENV=development nodemon --exec \"ts-node -P tsconfig.node.json server/index.ts\"",
-      "build": "npm run build:client && npm run build:server",
-      "build:client": "vite build --outDir dist/client",
-      "build:server": "tsc -p tsconfig.server.json",
-      "start": "cross-env NODE_ENV=production node dist/server/index.js",
+      "dev": "nodemon api/index.js",
+      "build": "echo \"No build required for this project, Vercel handles Node.js and static files.\"",
+      "start": "node api/index.js",
       "lint": "eslint . --ext .ts,.tsx",
       "test": "jest",
       "test:e2e": "playwright test",
@@ -32,13 +32,16 @@
       "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
       "cross-env": "^7.0.3",
+      "crypto": "^1.0.1",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "msw": "^1.2.5",
       "openai": "^4.12.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "react-router-dom": "^6.16.0"
+      "react-router-dom": "^6.16.0",
+      "next": "^14.0.3",
+      "querystring": "^0.2.1"
     },
     "devDependencies": {
       "@playwright/test": "^1.38.1",
