--- a/vercel.json
+++ b/vercel.json
@@ -8,45 +8,11 @@
   "regions": ["fra1"],
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" },
-    { "src": "dist/client/**/*", "use": "@vercel/static" }
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    {
-      "src": "/assets/(.*)\\.js$",
-      "headers": { "content-type": "application/javascript" },
-      "dest": "/dist/client/assets/$1.js"
-    },
-    {
-      "src": "/(.*)\\.js$",
-      "headers": { "content-type": "application/javascript" },
-      "dest": "/$1.js"
-    },
-    {
-      "src": "/install",
-      "dest": "/public/install.html"
-    },
-    {
-      "src": "/dashboard",
-      "dest": "/public/dashboard/index.html"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/dist/client/assets/$1"
-    },
-    {
-      "src": "^/favicon.ico$",
-      "dest": "/public/favicon.ico"
-    },
-    {
-      "src": "^/$",
-      "dest": "/public/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
+    { "src": "/(.*)", "dest": "/public/$1" }
   ],
   "env": {
     "NODE_ENV": "production",
