--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "dest": "/public/$1" },
+    { "handle": "filesystem" }
   ],
   "env": {
     "NODE_ENV": "production",
