--- a/package.json
+++ b/package.json
@@ -1,68 +1,17 @@
 {
-    "name": "shoppulse",
+    "name": "minimal-shopify-app",
     "version": "1.0.0",
-    "description": "Shopify OAuth app for Vercel",
+    "description": "Minimale Shopify App mit OAuth & App Bridge",
     "main": "api/index.js",
-    "private": true,
-    "license": "MIT",
-    "type": "commonjs",
     "scripts": {
-      "dev": "nodemon api/index.js",
-      "build": "echo \"No build required for this project, Vercel handles Node.js and static files.\"",
-      "start": "node api/index.js",
-      "lint": "eslint . --ext .ts,.tsx",
-      "test": "jest",
-      "test:e2e": "playwright test",
-      "typecheck": "tsc --noEmit",
-      "vercel-build": "npm run build",
-      "vercel-dev": "vercel dev"
+      "vercel-build": "echo 'Vercel Build - Keine weiteren Build-Schritte erforderlich'"
     },
     "dependencies": {
-      "@emotion/react": "^11.11.0",
-      "@emotion/styled": "^11.11.0",
-      "@shopify/app-bridge": "^3.7.9",
-      "@shopify/app-bridge-react": "^3.7.9",
-      "@shopify/app-bridge-utils": "^3.5.1",
-      "@shopify/polaris": "^13.0.0",
-      "@shopify/shopify-api": "^11.12.0",
-      "@shopify/shopify-app-session-storage-postgresql": "^4.0.17",
-      "@shopify/shopify-app-session-storage-sqlite": "^4.0.17",
-      "axios": "^1.6.2",
-      "body-parser": "^1.20.2",
+      "axios": "^1.6.0",
       "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
-      "cross-env": "^7.0.3",
-      "crypto": "^1.0.1",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "msw": "^1.2.5",
-      "openai": "^4.12.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-router-dom": "^6.16.0",
-      "next": "^14.0.3",
-      "querystring": "^0.2.1"
-    },
-    "devDependencies": {
-      "@playwright/test": "^1.38.1",
-      "@types/cors": "^2.8.14",
-      "@types/express": "^4.17.17",
-      "@types/node": "^20.6.0",
-      "@types/react": "^18.2.21",
-      "@types/react-dom": "^18.2.7",
-      "@typescript-eslint/eslint-plugin": "^6.7.0",
-      "@typescript-eslint/parser": "^6.7.0",
-      "@vitejs/plugin-react": "^4.0.4",
-      "eslint": "^8.49.0",
-      "eslint-config-prettier": "^9.0.0",
-      "eslint-plugin-react": "^7.33.2",
-      "eslint-plugin-react-hooks": "^4.6.0",
-      "jest": "^29.7.0",
-      "nodemon": "^3.0.1",
-      "prettier": "^3.0.3",
-      "ts-node": "^10.9.1",
-      "typescript": "^5.2.2",
-      "vite": "^4.4.9"
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2"
     },
     "engines": {
       "node": ">=18.0.0"
