--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,12 @@
   "regions": ["fra1"],
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "embedded.html", "use": "@vercel/static" }
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/embedded", "dest": "/embedded.html" },
-    { "src": "/dashboard", "dest": "/public/dashboard/index.html" },
+    { "src": "/dashboard", "dest": "/public/dashboard.html" },
+    { "src": "/embedded", "dest": "/public/embedded.html" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ],
